--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Flatdango</h1>
+    <h1>Movie Theater</h1>
     <h2>Buy Tickets for Your Favorite Movies</h2>
   </header>
 
