index.html index.css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <aside>
       <h3>Movies</h3>
-      <ul id="movies-list"></ul>
+      <ul id="movies-list">
+        <!-- Movie list items will be dynamically added here -->
+      </ul>
     </aside>
   </main>
 
@@ -33,7 +35,7 @@
     <p>Flatiron Movie Theater &copy; 2024</p>
   </footer>
 
+  <!-- Added event listener to update the main movie details and sold-out logic -->
   <script src="index.js"></script>
 </body>
 </html>
-
