--- a/index.html
+++ b/index.html
@@ -38,4 +38,4 @@
   <!-- Added event listener to update the main movie details and sold-out logic -->
   <script src="index.js"></script>
 </body>
-</html>
+</html
